<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.profile.AccountFragment">

    <ScrollView
        android:id="@+id/googleAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:elevation="12dp"
                    android:id="@+id/view2"
                    app:cardCornerRadius="40dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">
                    <ImageView
                        android:layout_height="80dp"
                        android:layout_width="match_parent"
                        android:id="@+id/imgProfilePic"
                        android:src="@drawable/dummy_profile450x450"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
                    </ImageView>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtPhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8976729965"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#3b4148"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/btn_logout_from_google" />

            <!--<Button
                android:id="@+id/btn_revoke_access"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_revoke_access" />-->
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/emailAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:elevation="12dp"
                    android:id="@+id/view3"
                    app:cardCornerRadius="40dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">
                    <ImageView
                        android:layout_height="80dp"
                        android:layout_width="match_parent"
                        android:id="@+id/imgEmailProfilePic"
                        android:src="@drawable/dummy_profile450x450"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
                    </ImageView>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtEmail2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/txtPhoneNumber2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/old_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/prompt_password"
                android:imeActionId="@integer/customImeActionId"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/new_pass"
                android:imeActionId="@integer/customImeActionId"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/changeEmail"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:text="@string/btn_change"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/changePass"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:text="@string/btn_change"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/send"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:text="@string/btn_send"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/remove"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:text="@string/btn_remove"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/change_email_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#3b4148"
                android:text="@string/change_email"
                android:textStyle="bold" />

            <Button
                android:id="@+id/change_password_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#3b4148"
                android:text="@string/change_password"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sending_pass_reset_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#3b4148"
                android:text="@string/send_password_reset_email"
                android:textStyle="bold" />

            <!--<Button
                android:id="@+id/remove_user_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remove_user"
                android:textStyle="bold" />-->

            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/primary"
                android:text="@string/btn_sign_out"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>