<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_gravity="center"
        android:maxLength="14"
        android:ems="10"
        android:inputType="phone"
        android:hint="Enter Phone Number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:textAlignment="center">
        <RelativeLayout
            android:id="@+id/rl_bt_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/bt_send_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@android:color/white"
                android:text="Send Otp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_bt_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center">
            <Button
                android:id="@+id/bt_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:text="Resend OTP" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/otp_msg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:text="@string/otp_verification_msg1"/>
    <TextView
        android:id="@+id/otp_msg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:textSize="12sp"
        android:text="@string/otp_verification_msg2"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/et_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:ems="6"
            android:maxLength="6"
            android:inputType="number"
            android:hint="Enter OTP" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/bt_verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white"
            android:text="Verify OTP" />
    </RelativeLayout>
    <TextView
        android:id="@+id/otp_msg3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green_tick"
        android:textAlignment="center"
        android:visibility="gone"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:text="@string/mobile_verified"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/et_referral_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:ems="6"
            android:maxLength="6"
            android:inputType="text"
            android:hint="Enter Referral" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/bt_submit_referral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:background="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/white"
            android:text="Get Credits" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/bt_skip_referral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/primary"
            android:text="Skip" />
    </RelativeLayout>
    <TextView
        android:id="@+id/referral_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textColor="@color/green_tick"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>
</LinearLayout>